--- a/.env
+++ b/.env
@@ -15,7 +15,7 @@ USE_FULL_RESOLUTION_IMAGES=false
 THEME=https://raw.githubusercontent.com/aidanastridge/Publisher/HEAD/theme.css
 BASE_THEME=dark
 dgHomeLink=false
-dgPassFrontmatter=true
+dgPassFrontmatter=false
 dgShowBacklinks=false
 dgShowLocalGraph=false
 dgShowInlineTitle=false
