--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-SITE_NAME_HEADER=PierreBeaucoral's Garden
+SITE_NAME_HEADER=Pierre's Garden
 SITE_MAIN_LANGUAGE=en
-SITE_BASE_URL= https://pierrebeaucoral.github.io/my_garde
+SITE_BASE_URL= https://pierrebeaucoral.github.io/my_garden
 SHOW_CREATED_TIMESTAMP=false
 TIMESTAMP_FORMAT=MMM dd, yyyy h:mm a
 SHOW_UPDATED_TIMESTAMP=false
@@ -12,7 +12,7 @@ NOTE_ICON_BACK_LINKS=false
 STYLE_SETTINGS_CSS=
 STYLE_SETTINGS_BODY_CLASSES=
 USE_FULL_RESOLUTION_IMAGES=false
-THEME=https://raw.githubusercontent.com/shaggyfeng/obsidian-Golden-Topaz-theme/HEAD/theme.css
+THEME=https://raw.githubusercontent.com/druxorey/minimal-dracula-for-obsidian/HEAD/theme.css
 BASE_THEME=light
 dgHomeLink=true
 dgPassFrontmatter=false
