--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 SITE_NAME_HEADER=Pierre's Garden
 SITE_MAIN_LANGUAGE=en
-SITE_BASE_URL= https://pierrebeaucoral.github.io/my_garden
+SITE_BASE_URL= pierrebeaucoral.github.io/my_garden
 SHOW_CREATED_TIMESTAMP=false
 TIMESTAMP_FORMAT=MMM dd, yyyy h:mm a
 SHOW_UPDATED_TIMESTAMP=false
